--- a/asets/css/style.css
+++ b/asets/css/style.css
@@ -18,6 +18,9 @@
 
 img{
     max-width: 100%;
+    display: block;
+    object-fit: cover;
+
 }
 
 body{
@@ -250,12 +253,6 @@ span{
    
 }
 @media only screen and (max-width: 768px ) {
-    .palabras p{
-        padding: 9.5px
-    }
-    .palabras p{
-        font-size: larger;
-    }
 }
 @media only screen and (min-width: 992px){
 
@@ -321,15 +318,9 @@ span{
 }
 /*560 x 536*/
 @media only screen and (min-width: 1024px) {
-    .porcent h3{
-        font-size: xx-large;
-    }
-    .palabras p{
-        font-size: xx-large;
-    }
+   
+
 }
-
-
 @media only screen and (min-width: 1200px){
     #Rectangle {
      width: 500px;
@@ -343,23 +334,17 @@ span{
         width: 700px;
         
     }
-   .palabras p{
-    padding: 17.5px;
-    font-size: xx-large;
-   }
-   .porcent h3{
-    padding: 17.5px;
-    font-size: xx-large;
-   }
+  
+
+
 }
-
-
-    
 
 
 
 
 /*-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
+
+/*ACERCA DE MI*/
 
 .page-content{
     background-color: var(--black-gray);
@@ -453,6 +438,8 @@ span{
 
 /*------------------------------------------------------------------------------------------------------------*/
 
+/*MIS HABILIDADES*/
+
 .page-skills{
     background-color: var(--black);
     
@@ -471,27 +458,16 @@ span{
     position: relative;
 }
 
-/*.conteiner-skills h3{
-    color: var(--yellow);
-    padding: 1rem;
-    line-height: 18px;
-    position: relative;
-}
+/*********************************************************----------------------------------------------------*/
 
-
-
-.conteiner-skills p{
-    color: var(--gray);
-    padding: 1rem;
-    line-height: 18px;
-    position: relative;
+/*.conteiner-skills{
+    
+    
+    
 }*/
-
-
-.conteiner-skills{
+.conteiner-words{
+    padding: 1rem;
     display: flex;
-    padding: 1.5rem 1rem 2.5rem 1rem;
-    gap: 1.5rem;
     justify-content: center;
 }
 
@@ -500,18 +476,19 @@ span{
     color: var(--yellow);
     position: relative;
     padding: 0.5rem;
+   
     
     
 
 }
-
-
 .palabras p{
     color: var(--gray);
     position: relative;
-    padding: 7.4px
-    
+    padding: 0.5rem
 }
+
+
+
 
 .angulo img{
     position: absolute;
@@ -673,9 +650,7 @@ span{
     width: 270px;
     height: 450px;
    }
-   .palabras p{
-    font-size: medium;
-   }
+   
 
 }
 @media only screen and (max-width:375px ) {
@@ -687,5 +662,11 @@ span{
 @media only screen and (max-width:320px ) {
     .angulo img{
         width: 265px;
+    }
+}
+
+@media only screen and (max-width:601px) and (max-width:767px) {
+    .angulo-img{
+        width: calc( 100vh - 400px );
     }
 }
